# tpc

./: .gitignore  .gitmodules  Makefile  README.md  Vagrantfile
endhost/: Makefile  monitor.c  sr-endhostd.c  sr-endhostd.conf  sr-endhostd.h  srv6-vm-config  working_modifs.patch  zlog.conf
lib/: sr-notification.h
localctrl/: Makefile  bpf_helpers.h  monitor.c  prefixmatch.c  prefixmatch.h  sr-localctrl.c  sr-localctrl.conf  sr-localctrl.h  zlog.conf
manifests/: default.pp
router/: Makefile  README.md  activate_rerouting.sh  nf_queue.c  nf_queue.h  notifier.c  sr-rerouted  sr-rerouted.c  sr-rerouted.conf  sr-rerouted.h  zlog.conf
server/: Makefile  sr-serverd.c  sr-serverd.conf  zlog.conf
test/: Arpanet_low_latency.graph  config.py  eval.py  explore_data.py  filter_topos.py  repetita_network.py  repetita_plot.py  run.py  simple_network.py  sr_effectiveness_plot.py  sricmp_dissector.py  test.py  utils.py
test/eval/: bpf_stats.py  ecn_eval.py  mices_eval.py  repetita_eval.py  utils.py
test/eval/db/: __init__.py  ab_results.py  base.py  iperf_results.py  short_tcp_ebpf_experiment.py  snapshots.py  tcp_ebpf_experiment.py
test/examples/: albilene.py  improvement_combinations.json  repetita_network.py
test/report_throughput_latency/: .gitignore  Cargo.toml
test/report_throughput_latency/src/: main.rs
test/reroutemininet/: clean.py  config.py  host.py  link.py  net.py  router.py  topo.py
test/templates/: sr-rerouted.mako
text/nsdi/: biblio.bib  nsdi.bib  nsdi.tex
text/sigcomm/: arch.tex  biblio.bib  eval.tex  intro.tex  paper.tex
(+1597 files in other folders)
