[package]
name = "report_throughput_latency"
version = "0.1.0"
authors = ["Maxime Piraux <maxime.piraux@uclouvain.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcarp = "1.1.0"
etherparse = "0.8.2"
serde_json = "1.0.40"
serde = { version = "1.0", features = ["derive"] }